--- a/view/community/mainCommunity.html
+++ b/view/community/mainCommunity.html
@@ -223,7 +223,7 @@
                 } else {
 
                     $.each(list, function (i, val) {
-
+                        
                         app += '<div style="width: 350px; height: 400px;">'
                             +  '<article article class="project2_wrap" >'
                             +  '<a href="../store/storeDetail.html?seq=' + val.productSeq + '"></a>'
@@ -282,7 +282,7 @@
 
                         app += '<div style="width: 320px; margin-right: 50px;">'
                             +   '<article article class="project_wrap" >'
-                            +    '<a href="./cardDetail.html?seq='+val.cardSeq+'"></a>'
+                            +    '<a href="./storyDetail.html?seq='+val.cardSeq+'"></a>'
                             +     '<div class="project_item">'
                             +      '<span></span>'
                             +      '<img src="http://localhost:3000/upload/'+val.cardFileName+'" alt="">'
