--- a/view/community/storyWrite.html
+++ b/view/community/storyWrite.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>완벽한 자취생활, 완자</title>
+    <meta charset="UTF-8">
+    <title>완벽한 자취생활, 완자</title>
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>  제이쿼리 -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 제이쿼리 -->
     <link rel="shortcut icon" href="../../assets/img/wanza-Icon.ico" type="image/x-icon"> <!-- 브라우저 탭 아이콘 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> <!-- 폰트어썸아이콘 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- 폰트어썸아이콘 -->
     <link rel="stylesheet" type="text/css" href="../../assets/bootstrap/css/bootstrap.min.css"> <!-- 부트스트랩 -->
     <link rel="stylesheet" type="text/css" href="../../css/style.css"> <!-- 공통 -->
-
     <style>
-
     /* 스토리 sort 메뉴 */
-    .pop_wrap{
+    .pop_wrap {
         margin: 0;
         height: 50px;
     }
-    .btn_pop{   /* 제목 버튼 */
+
+    .btn_pop {
+        /* 제목 버튼 */
         display: flex;
         position: relative;
-        width: 100%; height: 100%;
+        width: 100%;
+        height: 100%;
         margin-bottom: 1PX;
         border: solid 0.5px #757575;
         border-radius: 4px;
@@ -30,10 +33,12 @@
         align-items: center;
         z-index: 10;
     }
-    .btn_pop.change{
+
+    .btn_pop.change {
         justify-content: start;
     }
-    .pop_box{
+
+    .pop_box {
         position: relative;
         overflow: hidden;
         margin-left: -19px;
@@ -45,37 +50,50 @@
         transition: height .3s, opacity .3s;
         /* transition: all .3s; */
     }
+
     .pop_box:hover,
-    .btn_pop:hover+.pop_box{     /* 마우스 이벤트 */
+    .btn_pop:hover+.pop_box {
+        /* 마우스 이벤트 */
         opacity: 1;
         height: auto;
         padding: 13px 16px 16px 16px;
         transition: all .3s;
     }
-    .pop_content{   /* 내용박스 */
+
+    .pop_content {
+        /* 내용박스 */
         position: relative;
         border-radius: 4px;
         background-color: white;
         z-index: 3;
         box-shadow: 0 -1px 16px rgb(0 0 0 / 20%);
     }
-    .pop_content::before{   /* 박스 위 꼬다리 */
+
+    .pop_content::before {
+        /* 박스 위 꼬다리 */
         content: "";
         position: absolute;
         background: white;
         z-index: -1;
-        width: 15px; height: 15px;
-        top: -8px; left: 40%;
+        width: 15px;
+        height: 15px;
+        top: -8px;
+        left: 40%;
         transform: rotate(45deg);
     }
-    .pop_content.active::before{
+
+    .pop_content.active::before {
         background: wheat;
     }
-    .sub_content_ul{
+
+    .sub_content_ul {
         list-style: none;
-        margin: 0; padding: 0;
+        margin: 0;
+        padding: 0;
     }
-    .btn_subpop{    /* 세부내용 버튼 */
+
+    .btn_subpop {
+        /* 세부내용 버튼 */
         width: 100%;
         height: 100%;
         border: none;
@@ -85,37 +103,77 @@
         padding: 15px;
         text-align: left;
     }
-    .sub_content_ul li:first-of-type .btn_subpop{
+
+    .sub_content_ul li:first-of-type .btn_subpop {
         border-top-left-radius: 4px;
         border-top-right-radius: 4px;
     }
-    .sub_content_ul li:last-of-type .btn_subpop{
+
+    .sub_content_ul li:last-of-type .btn_subpop {
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;
     }
-    .btn_subpop:hover{
+
+    .btn_subpop:hover {
         background-color: wheat;
     }
-    .color_wrap{
+
+    .color_wrap {
         display: flex;
         align-items: center;
     }
-    .color_circle{
+
+    .color_circle {
         border-radius: 50%;
-        width: 20px; height: 20px;
+        width: 20px;
+        height: 20px;
         margin: 0 10px 0 2px;
     }
-    .gy{background-color: gray;}
-    .wh{background-color: white; border: gray 0.5px solid;}
-    .bl{background-color: black;}
-    .br{background-color: brown;}  /* rgb(154, 230, 213) */
-    .bu{background-color: blue;}
-    .pi{background-color: pink;}
-    .gr{background-color: green;}
-    .re{background-color: red;}
-    .ye{background-color: yellow;}
 
-    .sort_clear{
+    .gy {
+        background-color: gray;
+    }
+
+    .wh {
+        background-color: white;
+        border: gray 0.5px solid;
+    }
+
+    .bl {
+        background-color: black;
+    }
+
+    .mi {
+        background-color: rgb(154, 230, 213);
+    }
+
+    .bu {
+        background-color: blue;
+    }
+
+    .pi {
+        background-color: pink;
+    }
+
+    .gr {
+        background-color: green;
+    }
+
+    .br {
+        background-color: brown;
+    }
+
+    .ye {
+        background-color: yellow;
+    }
+
+    .re {
+        background-color: red;
+    }
+
+
+
+    .sort_clear {
         display: none;
         border: none;
         background-color: transparent;
@@ -123,52 +181,50 @@
         font-size: 12pt;
         font-weight: 900;
     }
-    .sort_clear:hover{
+
+    .sort_clear:hover {
         color: #f1aa94;
     }
 
-    .write_btn{
+    .uploadImg {
+        height:230px;
+        width: 230px;
+        object-fit: cover;
+        margin: 15px;
+    }
+
+    .uploadImg:hover {
+        filter: brightness(85%);
+    }
+
+    .write_btn {
         width: 100px;
         height: 50px;
-        margin: 0px 70%;
         border-radius: 5px;
-        color: white;
-        border: none;
-        background-color: #f4744c;
-        font: 1.2em bold;
-    }
-    .write_btn:hover{
         color: #f4744c;
         background-color: white;
         border: 0.5px solid #f4744c;
+        font: 1.2em bold;
     }
 
+    .write_btn:hover {
+        color: white;
+        border: none;
+        background-color: #f4744c;
+    }
     </style>
 </head>
+    
 <body>
     <header include-html="../commons/header.html"></header>
     <nav include-html="../commons/menuComm.html"></nav>
 
-    <div class="container mt-5">
-        <h1 style="font-size: 30px;margin-bottom: 15px;"><strong>스토리</strong></h1>
+
+    <div class="container">
 
         <div id="type_menu">
-            <div class="row my-5 mx-1">
-
-                <div class="col-md-2 pop_wrap pl-0">
-                    <button type="button" class="btn_pop" value="sort=0">정렬 <i class="fas fa-sort"></i></button>
-                    
-                    <div class="pop_box">
-                        <div class="pop_content">
-                            <ul class="sub_content_ul">
-                                <li><button type="button" class="btn_subpop" value="sort=1">최신순</button></li>
-                                <li><button type="button" class="btn_subpop" value="sort=2">조회순</button></li>
-                                <li><button type="button" class="btn_subpop" value="sort=3">인기순</button></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div> <!-- 정렬 -->
-
+            <div class="row m-5">
+        
                 <div class="col-md-2 pop_wrap">
                     <button type="button" class="btn_pop" value="tagHometype=0">주거형태 <i class="fas fa-sort"></i></button>
                     
@@ -231,30 +287,45 @@
                         </div>
                     </div>
                 </div> <!-- 색상 -->
-
+        
                 <button class="sort_clear">초기화</button>
-
-                <div class="col-md-2">
-                    <button type="button" class="write_btn">글쓰기</button>
-                </div>
 
             </div> <!-- row -->
         </div> <!-- type menu 끝 -->
-    </div>
 
-    <div class="container" style="width: 1200px;">
-        <div class="mt-5 ml-3">
-            <div id="hotCardList" class="row">
-                <!-- 인기 인테리어 리스트 생성되는 곳 -->
+        <form id="upload_frm">
+            <input type="hidden" id="_userSeq" name="userSeq">
+            <input type="hidden" id="_tagColor" name="tagColor">
+            <input type="hidden" id="_tagHomeType" name="tagHomeType">
+            <input type="hidden" id="_tagStyle" name="tagStyle">
+            <div class="row">
+                <div class="col-xl-3 offset-xl-2">
+                    <img src="../../assets/img/imgUpload.png" id="_uploadImg" class="uploadImg">
+                    <input type="file" id="_file" name="cardFile" style="display:none;">
+                    <input type="hidden" id="_target_url" name="target_url">
+                </div>
+                <div class="col">
+                    <div class="row">
+                        <div class="col-xl-12" style="padding: 15px;"><input type="text" id="_cardTitle" name="cardTitle" style="width: 400px;height: 35px;" placeholder="제목">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col"><textarea id="_cardContent" name="cardContent" style="width: 400px;height: 180px;resize: none;" placeholder="사진에 대해 설명해주세요.&#13;&#10;(50자 이내 작성)"></textarea></div>
+                    </div>
+                    <div id="text_cnt">(0 / 50)</div>
+                </div>
             </div>
-        </div>
+            <div class="row">
+                <div class="col text-center" style="margin: 20px;"><button class="write_btn" type="button">올리기</button>
+                </div>
+            </div>
+        </form>
     </div>
 
 
 
 
     <footer include-html="../commons/footer.html"></footer>
-
 </body>
 
 <script src="../../assets/js/jquery.min.js"></script>
@@ -263,12 +334,22 @@
 <script src="../../js/header.js"></script>
 
 <script>
-$(document).ready(function() {
-    $('.sub_content_ul li:first-of-type .btn_subpop').hover( function() { // 메뉴 호버시 색
+
+$(document).ready(function () {
+
+    //로그인한 계정 닉네임 가져오기
+    let sessionId = JSON.parse(sessionStorage.getItem("login"));
+    console.log(sessionId);
+
+    $('#_userSeq').val(sessionId.userSeq);
+
+    let tagData;
+
+    $('.sub_content_ul li:first-of-type .btn_subpop').hover(function () { // 메뉴 호버시 색
         $('.pop_content').toggleClass('active')
     });
 
-    $('.btn_subpop').click( function() { //선택한 걸로 제목 바꾸기, 값 바꾸기
+    $('.btn_subpop').click(function () { //선택한 걸로 제목 바꾸기
         let val = $(this).val()
         if($(this).children().hasClass('color_wrap')){
             $(this).parents('.pop_wrap').children().first().html( $(this).children().html()+'<i class="fas fa-sort"></i>');
@@ -277,71 +358,116 @@ $(document).ready(function() {
             $(this).parents('.pop_wrap').children('.btn_pop').html($(this).text()+' <i class="fas fa-sort"></i>')
             $(this).parents('.pop_wrap').children('.btn_pop').val(val);
         }
-        let data = setJdata();
-        console.log( data );
-        getCardSortList(data);
+        tagData = setJdata();
+        console.log( tagData );
         $('.sort_clear').show();
     });
-    
+
+
     //초기화
-    let menu = ['정렬', '주거형태', '스타일', '색상'];
-    let initVal = ['sort=0', 'tagHometype=0', 'tagStyle=0', 'tagColor=0'];
+    let menu = ['주거형태', '스타일', '색상'];
+    let initVal = ['tagHometype=0', 'tagStyle=0', 'tagColor=0'];
     $('.sort_clear').click( function() {
         $('button[class=btn_pop]').each(function(i){
             $(this).html(menu[i]+' <i class="fas fa-sort"></i>');
             $(this).val(initVal[i])
         });
         $(this).css('display','none');
-        let data = setJdata();
-        console.log( data );
-        getCardSortList(data);
+        tagData = setJdata();
+        console.log( tagData );
     });
 
-    $('.write_btn').click(function() {
-        location.href = "storyWrite.html";
+
+    // 이미지 클릭 시 파일 업로드
+    $('.uploadImg').click(function(e) {
+        $('#_target_url').val(document.getElementById('_uploadImg').src);
+        e.preventDefault();
+        $('#_file').click();
     })
 
 
+    $('.write_btn').click(function() {
+        
+        if(tagData==null || tagData.tagHometype == 0 || tagData.tagStyle == 0 || tagData.tagColor == 0) {
+            alert('분류를 선택해주세요. ');
+            return;
+        } else {
+            $('#_tagColor').val(tagData.tagColor);
+            $('#_tagHomeType').val(tagData.tagHometype);
+            $('#_tagStyle').val(tagData.tagStyle);
+        };
+        if($('#_cardTitle').val() == "") {
+            alert('제목을 입력해주세요.');
+            return;
+        };
+        if($('#_cardContent').val() == "") {
+            alert('내용을 입력해주세요.');
+            return;
+        };
+        if(!$('#_file').val()) {
+            alert('사진을 첨부해주세요.');
+            return;
+        };
 
+        $.ajax({
+            url: "http://192.168.0.231:3000/storyWrite",
+            type: "post",
+            data: new FormData($('#upload_frm')[0]),
+            enctype:"multipart/form-data",
+			processData:false,
+			contentType:false,
+			cache:false,
+            success: function (data) {
+                console.log(data)
+                if (data == "suc") {
+                    alert('작성완료.');
+                } else {
+                    alert('작성실패');
+                }
+            },
+            error: function () {
+                alert('storyWrite error');
+            }
+        });
+        
+    });
+    
 
 });
 
 
-// '인기 인테리어 사진' 리스트
-getCardList();
-function getCardList() {
-    $.ajax({
-        url: "http://localhost:3000/getCardList",
-        type: "get",
-        success: function (list) {
-            console.log(list);
-            let app = ""
-            if (Object.keys(list).length == 0) {	// JSON형식의 길이
-                app += '<div style="width: 320px; margin-right: 50px;">'
-                    + '<h3 style="font-size: 15px; margin-top: 10px;"><b>게시글이 없습니다.</b></h3>'
-                    + "</div>";
-                $("#hotCardList").append(app);
-            } else {
-                $.each(list, function (i, val) {
-                    app += '<div style="width: 320px; margin-right: 50px;">'
-                            +   '<article article class="project_wrap" >'
-                            +    '<a href="./storyDetail.html?seq='+val.cardSeq+'"></a>'
-                            +     '<div class="project_item">'
-                            +      '<span></span>'
-                            +      '<img src="http://localhost:3000/upload/'+val.cardFileName+'" alt="">'
-                            +     '</div>'
-                            +     '<h3 style="font-family: \'Noto Sans KR\'; font-size: 16px; margin-top: 15px; height: 32px;"><b>'+val.cardTitle+'</b></h3>'
-                            +     '<span style="font-family: \'Noto Sans KR\';font-size: 13px;"><b>'+val.nickName+'</b></span>'
-                            +    '<div style="font-family: \'Noto Sans KR\'; font-size: 13px;margin-top: 5px;"><i class="fa fa-heart" style="font-size: 13px;color: rgb(244,116,76);margin-left: 2px;"></i> '+val.likeCount+'&ensp;│&ensp;<b>조회</b> '+val.cardReadCount+'</div>'
-                            +   '</article>'
-                            +  '</div >'
-                });
-                $("#hotCardList").append(app);
-            }
-        },
-        error: function () {  alert('error');   }
-    });
-};
+// 파일 업로드 이미지 미리보기
+let sel_file;
+$(document).on('change', '#_file', function(e) {
+    let files = e.target.files;
+    let filesArr = Array.prototype.slice.call(files);
+
+    filesArr.forEach(function(f) {
+        if(!f.type.match("image.*")) {
+            alert('이미지 확장자만 가능합니다. ');
+            return;
+        }
+
+        sel_file = f;
+
+        let reader = new FileReader();
+        reader.onload = function(e) {
+            $('#_uploadImg').attr("src", e.target.result);
+        }
+        reader.readAsDataURL(f);
+    })
+});
+
+// 글자수 제한 카운트 (50자)
+$('#_cardContent').on('keyup', function(e) {
+    
+    $('#text_cnt').html("(" + $(this).val().length + " / 50)");
+
+    if ($(this).val().length > 50) {
+        $(this).val($(this).val().substring(0, 50));
+        $('#text_cnt').html("(50 / 50)");
+    }
+});
 
 // 분류 데이터 가져와서 json형태로 만들기
 function setJdata(){
@@ -359,42 +485,12 @@ function setJdata(){
     return JSON.parse(param);
 }
 
-function getCardSortList(data) {
-    $.ajax({
-        url: "http://localhost:3000/getCardSortList",
-        type: "get",
-        data: data,
-        success: function (list) {
-            console.log(list);
-            $("#hotCardList").html('');
-            let app = ""
-            if (Object.keys(list).length == 0) {	// JSON형식의 길이
-                app += '<div style="width: 320px; margin-right: 50px; height:100px">'
-                    + '<h3 style="font-size: 15px; margin-top: 10px;"><b>게시글이 없습니다.</b></h3>'
-                    + "</div>";
-                $("#hotCardList").append(app);
-            } else {
-                $.each(list, function (i, val) {
-                    app += '<div style="width: 320px; margin-right: 50px;">'
-                            +   '<article article class="project_wrap" >'
-                            +    '<a href="./storyDetail.html?seq='+val.cardSeq+'"></a>'
-                            +     '<div class="project_item">'
-                            +      '<span></span>'
-                            +      '<img src="http://localhost:3000/upload/'+val.cardFileName+'" alt="">'
-                            +     '</div>'
-                            +     '<h3 style="font-family: \'Noto Sans KR\'; font-size: 16px; margin-top: 15px; height: 32px;"><b>'+val.cardTitle+'</b></h3>'
-                            +     '<span style="font-family: \'Noto Sans KR\';font-size: 13px;"><b>'+val.nickName+'</b></span>'
-                            +    '<div style="font-family: \'Noto Sans KR\'; font-size: 13px;margin-top: 5px;"><i class="fa fa-heart" style="font-size: 13px;color: rgb(244,116,76);margin-left: 2px;"></i> '+val.likeCount+'&ensp;│&ensp;<b>조회</b> '+val.cardReadCount+'</div>'
-                            +   '</article>'
-                            +  '</div >'
-                });
-                $("#hotCardList").append(app);
-            }
-        },
-        error: function () {  console.log('error')   }
-    });
-}
-</script>
 
+
+
+
+
+
+</script>
 
 </html>
